# fastapi

./: main.py  pyproject.toml  requirements.txt
config/: model_cfg.py  vectordb_cfg.py
src/: api_key_verifier.py  chat.py  embedding.py  vector_db_connect.py
src/models/: models.py
